# ModC

./: CMakeLists.txt  Configuration.cpp  Configuration.h  Configuration_Templates.hpp  CppBind.h  Environment.cpp  Environment.h  Example.modc  Fragment.h  ModC.cpp  ModC.h  ModC_Templates.hpp  ScriptEngine.cpp  ScriptEngine.h  VirtualMachine.cpp  VirtualMachine.h  main.cpp
Internals/: FunctionDeclaration.h  Instruction.cpp  Instruction.h  ScriptValue.cpp  ScriptValue.h  SyntaxTree.cpp  SyntaxTree.h  Type2Number.h
Steps/: 1_Tokenize.cpp  1_Tokenize.h  2_Parse.cpp  2_Parse.h  3_Translate.cpp  3_Translate.h
